--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
-    <title>App</title>
+    <link rel="icon" type="image/png" href="images/favicon-16x16.png" />
+    <title>covrHUB</title>
   </head>
   <body>
     <noscript>
